[package]
name = "rustlex_codegen"
version = "0.3.4"
authors = ["Naomi Nitel <naominitel@gmail.com>"]
description = "Syntex extension for RustLex"
homepage = "https://github.com/naominitel/rustlex"
repository = "https://github.com/naominitel/rustlex"
keywords = [ "lexer", "lexical", "analyser", "generator" ]
license = "MIT"
build = "build.rs"

[lib]
name = "rustlex_codegen"
path = "lib.rs"

[build-dependencies]
quasi_codegen = { version = "0.32.0", features = [ "with-syntex" ] }
syntex        = { version = "0.58.1" }

[dependencies]
bit-set = ">= 0.3.0"
log = "0.3.6"
rustlex_fsa   = { version = "0.3.4",  path = "../fsa" }
quasi         = { version = "0.32.0", features = [ "with-syntex" ] }
syntex        = { version = "0.58.1" }
syntex_syntax = { version = "0.58.1" }
syntex_errors = { version = "0.58.1" }
