[package]
name = "rustlex_codegen"
version = "0.4.0"
authors = ["Naomi Nitel <naominitel@gmail.com>"]
description = "Syntax extension for RustLex"
homepage = "https://github.com/naominitel/rustlex"
repository = "https://github.com/naominitel/rustlex"
keywords = [ "lexer", "lexical", "analyser", "generator" ]
license = "MIT"

[lib]
name = "rustlex_codegen"
path = "lib.rs"
proc-macro = true

[dependencies]
bit-set = ">= 0.3.0"
log = "0.3.6"
rustlex_fsa = { version = "0.4.0",  path = "../fsa" }
quote = "0.4"
proc-macro2 = "0.2"
