[package]
name = "rustlex_fsa"
version = "0.4.0"
authors = ["Naomi Nitel <naominitel@gmail.com>"]
description = "Library for manipulating (deterministic) finite automata"
homepage = "https://github.com/naominitel/rustlex"
repository = "https://github.com/naominitel/rustlex"
keywords = [ "finite", "state", "machine", "automata", "automaton" ]
license = "MIT"

[lib]
name = "fsa"
path = "lib.rs"

[dependencies]
bit-set = "0.4.0"
